--- a/src/main/java/Chat.form
+++ b/src/main/java/Chat.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Chat">
-  <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -10,20 +10,22 @@
     <children>
       <scrollpane id="d663d">
         <constraints>
-          <grid row="1" column="1" row-span="8" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="9" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="7535c" class="javax.swing.JTextArea" binding="chatView">
+          <component id="46e7d" class="javax.swing.JTextArea" binding="chatView">
             <constraints/>
-            <properties/>
+            <properties>
+              <foreground color="-12805337"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
       <component id="6e879" class="javax.swing.JTextField" binding="sendField">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -33,7 +35,7 @@
       </component>
       <component id="eb4eb" class="javax.swing.JButton" binding="sendButton" default-binding="true">
         <constraints>
-          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Send"/>
@@ -49,20 +51,10 @@
       </component>
       <component id="87ec1" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="7" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="8" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
-        </properties>
-      </component>
-      <component id="e348a" class="javax.swing.JTextArea" binding="listOfUsers">
-        <constraints>
-          <grid row="2" column="2" row-span="6" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="240" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-11468978"/>
         </properties>
       </component>
       <component id="8b4fc" class="javax.swing.JLabel">
@@ -71,6 +63,27 @@
         </constraints>
         <properties>
           <text value="Logged in Users"/>
+        </properties>
+      </component>
+      <component id="753cc" class="javax.swing.JButton" binding="loggoutButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Loggout"/>
+        </properties>
+      </component>
+      <component id="a1def" class="javax.swing.JList" binding="listOfUsers">
+        <constraints>
+          <grid row="2" column="2" row-span="7" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-30150"/>
+          <font name="Bernard MT Condensed" size="12" style="0"/>
+          <foreground color="-16777216"/>
+          <selectionBackground color="-1381399"/>
         </properties>
       </component>
     </children>
